--- a/content/_index.html
+++ b/content/_index.html
@@ -1,130 +1,118 @@
 <section id="about" class="panel is-default">
-<div class="hero hero--about">
+  <div class="hero hero--about">
     <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
 
     <p class="subhead">
       고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
-      기술이 인간의 가능성을 확장하는 방식에 주목합니다.
+      [cite_start]기술이 인간의 가능성을 확장하는 방식에 주목합니다. [cite: 5]
     </p>
 
     <p class="subhead">
-      NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.
+      [cite_start]NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다. [cite: 5]
     </p>
-
   </div>
 </section>
 
-
 <section id="function" class="panel">
   <div class="hero hero--product product">
-    <h1 class="headline">CBW</h1>
+    <h1 class="headline">신체기능</h1>
+    <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
-    <p class="section-desc">
-      CBW(Conditiong Brace Wear)는 **바지 일체형 어시스트 수트**입니다.
-      일상적인 작업복의 편안함에 신체 기능 보조 기술을 결합하여, 근로자의 근골격계 질환을 예방합니다.
-    </p>
+    <div class="product-grid">
+      <div class="product-card" onclick="location.href='#cbw-detail'">
+        <div class="card-img"><img src="/images/cbw.png" alt="CBW"></div>
+        <div class="card-info">
+          <h4>CBW</h4>
+          <p>바지 일체형 어시스트 수트</p>
+        </div>
+      </div>
 
-    <div class="product-image" style="text-align: center; margin-bottom: 60px;">
-      <img src="/images/cbw.png" alt="CBW 착용 모습" style="width:100%; max-width:800px; border-radius: 12px;">
+      <div class="product-card opacity-muted">
+        <div class="card-img" style="background: #f1f5f9; height: 200px; display:flex; align-items:center; justify-content:center; color: #cbd5e1; font-weight: 700;">Coming Soon</div>
+        <div class="card-info">
+          <h4>Next Solution</h4>
+          <p>새로운 솔루션을 준비 중입니다.</p>
+        </div>
+      </div>
     </div>
 
-    <h3>01. 일상 착용을 전제로 설계된 구조</h3>
-    <p>
-      CBW는 '입는 로봇'의 거부감을 없앴습니다. 별도의 기계 장치가 겉으로 드러나지 않아 일반 작업복처럼 자연스럽고, 
-      출퇴근은 물론 하루 종일 착용해도 불편함이 없는 가볍고 쾌적한 소재를 사용했습니다.
-    </p>
+    <div id="cbw-detail" class="detail-content">
+      <h1 class="headline" style="font-size: 42px;">CBW</h1>
+      <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. [cite_start]작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다. [cite: 5]</p>
 
-    <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
-    <div class="product-image" style="background: #f8fafc; padding: 40px; border-radius: 16px; margin: 30px 0;">
-      <p style="text-align:center; color: var(--muted); font-size: 14px; margin-bottom: 20px;">[이미지: 복압 상승 및 요추 안정화 다이어그램]</p>
-      <img src="/images/cbw_mechanism_ko.png" alt="복부 서포터 메커니즘" style="width:100%; max-width:500px; display:block; margin: 0 auto;">
+      <h3>01. 일상 착용을 전제로 설계된 구조</h3>
+      <p>CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. [cite_start]일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다. [cite: 5]</p>
+
+      <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
+      <p>복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. [cite_start]장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다. [cite: 5]</p>
+
+      <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
+      <p>물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. [cite_start]반복적이고 강도가 있는 동작을 고려한 설계입니다. [cite: 5]</p>
+
+      <div class="cta-group">
+        <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
+        <a href="YOUR_CBW_PDF_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      </div>
     </div>
-    <p>
-      복부 서포터가 복강 내 압력을 적절히 높여 척추를 안쪽에서부터 단단하게 지지합니다. 
-      이를 통해 무거운 물건을 들거나 장시간 허리를 굽히는 동작에서도 요추의 정렬을 바르게 유지하도록 돕습니다.
-    </p>
-
-    <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
-    <div class="product-image" style="margin: 30px 0;">
-      <img src="/images/cbw_band_ko.png" alt="내부 어시스트 밴드 작동 원리" style="width:100%; max-width:600px; display:block; margin: 0 auto;">
-    </div>
-    <p>
-      바지 내부에 내장된 고탄성 어시스트 밴드는 사용자가 몸을 숙일 때 에너지를 저장하고, 
-      다시 일어설 때 수축하며 하체의 힘을 보조합니다. 반복적인 상하 이동 작업 시 피로도를 획기적으로 낮춰줍니다.
-    </p>
-
-    <h3>04. 하루 일과 전체를 기준으로 한 착용 경험</h3>
-    <p>
-      단순히 힘을 쓰는 순간만이 아니라, 걷고, 앉고, 계단을 오르는 모든 일상 동작을 방해하지 않습니다. 
-      CBW는 근로자의 '하루 전체'가 더 안전하고 편안해지도록 설계되었습니다.
-    </p>
-<div class="cta-group">
-  <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-  
-  <a href="YOUR_GOOGLE_DRIVE_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
-</div>
+  </div>
 </section>
 
 <section id="safework" class="panel">
   <div class="hero hero--product product">
-    <h1 class="headline">I-BOW</h1>
+    <h1 class="headline">안전한 작업</h1>
+    <p class="section-desc">고온 환경이나 위험한 작업 현장에서 근로자의 생명과 건강을 지키는 스마트 안전 솔루션입니다.</p>
 
-    <p class="section-desc">
-      I-BOW는 열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 **손목시계형 웨어러블 디바이스**입니다. 
-      외부 기온과 피부 온도를 동시에 측정하여 근로자의 안전을 실시간으로 보호합니다. 
-    </p>
+    <div class="product-grid">
+      <div class="product-card" onclick="location.href='#ibow-detail'">
+        <div class="card-img"><img src="/images/nextworklab_symbol.png" alt="I-BOW"></div>
+        <div class="card-info">
+          <h4>I-BOW</h4>
+          <p>열사병 예방 웨어러블 밴드</p>
+        </div>
+      </div>
 
-    <div class="product-image" style="text-align: center; margin-bottom: 60px;">
-      <img src="/images/nextworklab_symbol.png" alt="I-BOW 제품 이미지" style="width:100%; max-width:500px; border-radius: 12px;">
-      <p style="font-size: 13px; color: var(--muted); margin-top: 10px;">*이미지는 샘플이며, 실제 제품 카탈로그를 확인해 주세요.</p>
+      <div class="product-card opacity-muted">
+        <div class="card-img" style="background: #f1f5f9; height: 200px; display:flex; align-items:center; justify-content:center; color: #cbd5e1; font-weight: 700;">Coming Soon</div>
+        <div class="card-info">
+          <h4>Next Safety Solution</h4>
+          <p>새로운 안전 솔루션을 준비 중입니다.</p>
+        </div>
+      </div>
     </div>
 
-    <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
-    <p>
-      I-BOW는 두 개의 센서로 외부 기온과 피부 온도를 측정하며, 독자적인 알고리즘을 통해 심부 체온을 계산합니다. 
-      우리 몸에 위험하다고 알려진 심부 체온 **37.8°C 이상**을 감지할 경우 즉시 경고를 보냅니다. 
-    </p>
+    <div id="ibow-detail" class="detail-content">
+      <h1 class="headline" style="font-size: 42px;">I-BOW</h1>
+      [cite_start]<p class="subhead">열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다. [cite: 6]</p>
 
-    <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
-    <p>
-      현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 **소리(알람), 빛(LED), 진동**의 세 가지 패턴으로 위험을 알립니다.
-      알림을 받으면 즉시 수분을 섭취하고 휴식을 취할 수 있도록 가이드하여 온열 질환을 예방합니다.
-    </p>
+      <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
+      [cite_start]<p>외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다. [cite: 6]</p>
 
-    <h3>03. 현장 최적화 설계 및 편리한 관리</h3>
-    <p>
-      전원 ON/OFF 스위치가 탑재되어 관리가 용이하며, 전용 마그네틱 USB 케이블로 간편하게 충전하여 반복 사용할 수 있습니다. 
-      완충 시 하루 8시간 사용 기준 최대 90일까지 연속 가동이 가능해 유지보수 부담이 적습니다. 
-    </p>
+      <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
+      [cite_start]<p>현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 소리, 빛, 진동의 세 가지 패턴으로 위험을 알리고 수분 섭취와 휴식을 권고합니다. [cite: 6]</p>
 
-    <h3>제품 주요 사양</h3>
-    <div style="background: var(--soft); padding: 30px; border-radius: 8px; margin: 20px 0;">
-      <ul style="list-style: none; padding: 0; font-size: 15px;">
-        <li style="margin-bottom: 8px;"><strong>크기:</strong> 약 W32mm × H12.5mm </li>
-        <li style="margin-bottom: 8px;"><strong>무게:</strong> 약 40g (초경량 설계)</li>
-        <li style="margin-bottom: 8px;"><strong>재질:</strong> 본체(ABS), 벨트(실리콘 스포츠 타입) </li>
-        <li style="margin-bottom: 8px;"><strong>방수방진:</strong> IP67 등급 </li>
-        <li><strong>알림 알람:</strong> 약 70db</li>
-      </ul>
-      <p style="font-size: 13px; color: var(--muted); margin-top: 15px; border-top: 1px solid var(--border); padding-top: 10px;">
-        ※ 이 제품은 의료기기가 아닙니다. 성능 향상을 위해 외관 및 사양은 예고 없이 변경될 수 있습니다. 
-      </p>
-    </div>
+      <h3>03. 제품 주요 사양</h3>
+      <div style="background: var(--soft); padding: 30px; border-radius: 8px; margin-bottom: 24px;">
+        <ul style="list-style: none; padding: 0; font-size: 15px;">
+          [cite_start]<li style="margin-bottom: 8px;"><strong>크기:</strong> 약 W32mm × H12.5mm [cite: 6]</li>
+          [cite_start]<li style="margin-bottom: 8px;"><strong>무게:</strong> 약 40g (배터리 포함) [cite: 6]</li>
+          [cite_start]<li style="margin-bottom: 8px;"><strong>방수방진:</strong> IP67 등급 [cite: 6]</li>
+          [cite_start]<li><strong>가동 시간:</strong> 완충 시 최대 90일 (1일 8시간 사용 기준) [cite: 6]</li>
+        </ul>
+        [cite_start]<p style="font-size: 12px; color: var(--muted); margin-top: 15px;">※ 본 제품은 의료기기가 아닙니다. [cite: 6]</p>
+      </div>
 
-    <div class="cta-group">
-      <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="YOUR_GOOGLE_DRIVE_LINK_HERE" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <div class="cta-group">
+        <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
+        <a href="YOUR_IBOW_PDF_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      </div>
     </div>
   </div>
 </section>
 
-
 <section id="contact" class="panel">
   <div class="hero hero--contact product">
-    <h1 class="headline">문의</h1> <p class="section-desc">
-      넥스트워크 랩은 기술을 통해 더 안전한 내일을 만듭니다. <br>
-      솔루션 도입, 파트너십, 제품 데모 요청 등 모든 문의를 환영합니다.
-    </p>
+    <h1 class="headline">문의</h1>
+    <p class="section-desc">솔루션 도입 및 파트너십 문의를 환영합니다. 확인 후 신속히 연락드리겠습니다.</p>
 
     <div class="contact-grid">
       <div class="contact-card">
@@ -136,14 +124,14 @@
 
       <div class="contact-card">
         <div class="card-label">Address</div>
-        <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
+        [cite_start]<div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179 [cite: 5]</div>
         <p class="card-note">강남역 5번 출구 인근에 위치하고 있습니다.</p>
       </div>
 
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener">https://tuatua.kr</a></div>
-        <p class="card-note">넥스트워크 랩의 모기업 TUA Inc. 공식 홈페이지</p>
+        [cite_start]<p class="card-note">넥스트워크 랩의 모기업 (주)투아투아 공식 홈페이지 [cite: 5]</p>
       </div>
     </div>
   </div>
