--- a/content/_index.html
+++ b/content/_index.html
@@ -1,101 +1,80 @@
 <section id="about" class="panel">
   <div class="hero">
-    <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
-    <p class="section-desc">고령화와 AI 시대에 우리는 근로자의 신체적 한계를 극복하고 더 안전하게 일할 수 있는 기술을 연구합니다.</p>
-    <p style="font-size: 18px; color: #475569;">NextWork Lab.은 의료, 돌봄, 그리고 산업 현장에서 필수적인 디지털 헬스케어 및 어시스트 솔루션을 제안합니다.</p>
+    <h1 class="headline">We think about the <span class="coral">next generation</span> of work.</h1>
+    <p class="section-desc">고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다. 기술이 인간의 가능성을 확장하는 방식에 주목합니다.</p>
+    <p class="section-desc">NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.</p>
   </div>
 </section>
 
 <section id="function" class="panel">
   <h1 class="headline">신체기능</h1>
-  <p class="section-desc">근로자의 근골격계 부담을 덜어주고 신체 기능을 보조하는 혁신적인 솔루션입니다.</p>
+  <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
   <div class="product-grid">
     <div class="product-card" onclick="location.hash='#cbw-detail'">
       <div class="card-img"><img src="/images/cbw.png" alt="CBW"></div>
       <div class="card-info"><h4>CBW</h4><p>바지 일체형 어시스트 수트</p></div>
     </div>
-    <div class="product-card opacity-muted">
-      <div class="card-img" style="background: #f1f5f9; height: 160px; display:flex; align-items:center; justify-content:center; color: #cbd5e1; font-weight: 700;">Coming Soon</div>
-      <div class="card-info"><h4>Next Device</h4><p>준비 중인 솔루션입니다.</p></div>
-    </div>
   </div>
 
   <div id="cbw-detail" class="detail-content">
-    <h1 class="headline" style="font-size: 42px;">CBW</h1>
-    <div class="product-image"><img src="/images/cbw.png" alt="CBW 이미지"></div>
+    <h1 class="headline" style="font-size: 48px;">CBW</h1>
+    <div class="product-image"><img src="/images/cbw.png" alt="CBW"></div>
     
     <h3>01. 일상 착용을 전제로 설계된 구조</h3>
-    <p>CBW는 별도의 무거운 장비를 착용할 필요가 없습니다. 일반 작업복처럼 가볍게 입을 수 있어 하루 종일 자연스럽게 신체 기능을 보조받을 수 있습니다.</p>
+    <p class="section-desc">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
-    <h3>02. 요추를 지지하는 핵심 메커니즘</h3>
-    <p>복부 서포터가 복압을 높여 요추를 단단하게 고정합니다. 반복되는 굽힘 동작이나 장시간 서 있는 작업에서 허리 부담을 획기적으로 낮춰줍니다.</p>
+    <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
+    <p class="section-desc">복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
 
-    <h3>03. 하체 보조 밴드 시스템</h3>
-    <p>바지 내부에 설계된 특수 밴드가 근육의 움직임에 맞춰 적절한 장력을 제공하여, 근육 피로를 예방하고 부상 위험을 줄입니다.</p>
+    <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
+    <p class="section-desc">물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
 
     <div class="cta-group">
-      <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="https://drive.google.com/your-cbw-link" target="_blank" class="btn-nextwork btn-download">카탈로그 (PDF)</a>
+      <a href="mailto:info@tuatua.kr" class="btn-nextwork btn-inquiry">문의하기</a>
+      <a href="#" class="btn-nextwork btn-download">카탈로그 (PDF)</a>
     </div>
   </div>
 </section>
 
 <section id="safework" class="panel">
   <h1 class="headline">안전한 작업</h1>
-  <p class="section-desc">작업 현장의 환경적 리스크를 실시간으로 관리하여 안전 사고를 예방합니다.</p>
+  <p class="section-desc">현장의 위험 요소를 지능적으로 감지하여 근로자의 안전을 보호합니다.</p>
 
   <div class="product-grid">
     <div class="product-card" onclick="location.hash='#ibow-detail'">
       <div class="card-img"><img src="/images/nextworklab_symbol.png" alt="I-BOW"></div>
-      <div class="card-info"><h4>I-BOW</h4><p>열사병 예방 웨어러블 밴드</p></div>
-    </div>
-    <div class="product-card opacity-muted">
-      <div class="card-img" style="background: #f1f5f9; height: 160px; display:flex; align-items:center; justify-content:center; color: #cbd5e1; font-weight: 700;">Coming Soon</div>
-      <div class="card-info"><h4>Next Safety</h4><p>새로운 안전 솔루션을 준비 중입니다.</p></div>
+      <div class="card-info"><h4>I-BOW</h4><p>열사병 예방 밴드</p></div>
     </div>
   </div>
 
   <div id="ibow-detail" class="detail-content">
-    <h1 class="headline" style="font-size: 42px;">I-BOW</h1>
-    <div class="product-image"><img src="/images/nextworklab_symbol.png" alt="I-BOW 이미지"></div>
+    <h1 class="headline" style="font-size: 48px;">I-BOW</h1>
+    <div class="product-image"><img src="/images/nextworklab_symbol.png" alt="I-BOW"></div>
     
-    <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
-    [cite_start]<p>두 개의 고정밀 센서가 외부 기온과 피부 온도를 동시에 측정합니다[cite: 9, 26]. [cite_start]이를 통해 계산된 심부 체온이 위험 수준인 37.8°C에 도달하면 즉시 경고를 보냅니다[cite: 10, 42].</p>
+    <h3>01. 정밀 리스크 감지</h3>
+    <p class="section-desc">외부 기온과 피부 온도를 측정하는 듀얼 센서와 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다.</p>
 
-    <h3>02. 3중 알림 시스템 (소리, 빛, 진동)</h3>
-    [cite_start]<p>현장의 소음이나 주변 시야 방해와 관계없이 알림을 인지할 수 있도록 소리, 빛, 진동의 세 가지 방식으로 위험을 알립니다[cite: 11, 43]. [cite_start]알림 즉시 적절한 휴식과 수분 섭취를 권고합니다[cite: 11].</p>
-
-    <h3>03. 산업 현장에 최적화된 성능</h3>
-    [cite_start]<p>IP67 등급의 완벽한 방수·방진 성능을 갖추고 있으며 [cite: 38][cite_start], 완충 시 하루 8시간 사용 기준 최대 90일까지 가동되어 관리가 매우 편리합니다[cite: 43].</p>
+    <h3>02. 3중 알림 시스템</h3>
+    <p class="section-desc">소리, 빛, 진동을 통해 주변 소음이 심한 현장에서도 확실하게 위험을 인지하고 휴식을 취할 수 있도록 돕습니다.</p>
 
     <div class="cta-group">
-      <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="https://drive.google.com/your-ibow-link" target="_blank" class="btn-nextwork btn-download">카탈로그 (PDF)</a>
+      <a href="mailto:info@tuatua.kr" class="btn-nextwork btn-inquiry">문의하기</a>
+      <a href="#" class="btn-nextwork btn-download">카탈로그 (PDF)</a>
     </div>
   </div>
 </section>
 
 <section id="contact" class="panel">
   <h1 class="headline">문의</h1>
-  <p class="section-desc">넥스트워크 랩은 여러분의 안전한 내일을 위한 파트너가 되겠습니다.</p>
-
   <div class="contact-grid">
     <div class="contact-card">
       <div class="card-label">Email</div>
-      <div class="card-value"><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></div>
-      <p class="card-note">영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
-      <a href="mailto:info@tuatua.kr?subject=[문의] 제품 도입 관련 문의" class="btn-nextwork btn-inquiry" style="width:100%; margin-top:20px;">메일 보내기</a>
+      <div class="card-value"><a href="mailto:info@tuatua.kr" style="color: inherit; text-decoration: none;">info@tuatua.kr</a></div>
     </div>
     <div class="contact-card">
       <div class="card-label">Address</div>
       <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
-      <p class="card-note">강남역 5번 출구 인근에 위치하고 있습니다.</p>
-    </div>
-    <div class="contact-card">
-      <div class="card-label">Partnership</div>
-      <div class="card-value"><a href="https://tuatua.kr" target="_blank">tuatua.kr</a></div>
-      <p class="card-note">(주)투아투아 공식 홈페이지</p>
     </div>
   </div>
 </section>
