--- a/content/_index.html
+++ b/content/_index.html
@@ -1,9 +1,10 @@
 <section id="about" class="panel is-default">
   <div class="hero hero--about">
-    <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
+    <h1 class="headline">We think about the <span class="coral">next generation</span> of work.</h1>
 
     <p class="subhead">
-      고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다. 기술이 인간의 가능성을 확장하는 방식에 주목합니다.
+      고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
+      기술이 인간의 가능성을 확장하는 방식에 주목합니다.
     </p>
 
     <p class="subhead">
@@ -18,13 +19,17 @@
     <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/cbw.png" alt="CBW">
+      <img src="/images/cbw.png" alt="CBW 메인 이미지">
     </div>
 
     <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
 
     <h3>01. 일상 착용을 전제로 설계된 구조</h3>
     <p class="detail-text">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
+
+    <div class="product-image">
+      <img src="/images/placeholder_cbw_action.png" alt="CBW 활용 이미지">
+    </div>
 
     <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
     <p class="detail-text">복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
@@ -45,13 +50,17 @@
     <p class="section-desc">고온 환경이나 위험한 작업 현장에서 근로자의 생명과 건강을 지키는 스마트 안전 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/nextworklab_symbol.png" alt="I-BOW">
+      <img src="/images/nextworklab_symbol.png" alt="I-BOW 메인 이미지">
     </div>
 
     <p class="subhead">I-BOW는 열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다.</p>
 
     <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
     <p class="detail-text">외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다.</p>
+
+    <div class="product-image">
+      <img src="/images/placeholder_ibow_alert.png" alt="I-BOW 알림 방식 이미지">
+    </div>
 
     <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
     <p class="detail-text">현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 소리, 빛, 진동의 세 가지 패턴으로 위험을 알리고 수분 섭취와 휴식을 권고합니다.</p>
@@ -82,7 +91,7 @@
     <div class="contact-grid">
       <div class="contact-card">
         <div class="card-label">Email</div>
-        <div class="card-value"><a href="mailto:info@tuatua.kr">info@tuatua.kr</a></div>
+        <div class="card-value"><a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a></div>
         <p class="card-note">문의 주시면 영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
         <a href="mailto:info@tuatua.kr?subject=[문의] 제품 도입 관련 문의" class="btn-nextwork btn-inquiry" style="margin-top: 20px; width: 100%;">메일 보내기</a>
       </div>
@@ -95,8 +104,8 @@
 
       <div class="contact-card">
         <div class="card-label">Partnership</div>
-        <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener">https://tuatua.kr</a></div>
-        <p class="card-note">넥스트워크 랩의 모기업 TUA Inc. 공식 홈페이지</p>
+        <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
+        <p class="card-note">넥스트워크 랩의 모기업 (주)투아투아 공식 홈페이지</p>
       </div>
     </div>
   </div>
