--- a/content/_index.html
+++ b/content/_index.html
@@ -1,15 +1,8 @@
 <section id="about" class="panel is-default">
   <div class="hero hero--about">
-    <h1 class="headline">We think about the <span class="coral">next generation</span> of work.</h1>
-
-    <p class="subhead">
-      고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
-      기술이 인간의 가능성을 확장하는 방식에 주목합니다.
-    </p>
-
-    <p class="subhead">
-      NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.
-    </p>
+    <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
+    <p class="subhead">고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다. 기술이 인간의 가능성을 확장하는 방식에 주목합니다.</p>
+    <p class="subhead">NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.</p>
   </div>
 </section>
 
@@ -19,7 +12,7 @@
     <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/cbw.png" alt="CBW 메인 이미지">
+      <img src="/images/cbw.png" alt="CBW 메인 비주얼">
     </div>
 
     <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
@@ -28,7 +21,7 @@
     <p class="detail-text">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
     <div class="product-image">
-      <img src="/images/placeholder_cbw_action.png" alt="CBW 활용 이미지">
+      <img src="/images/leavo_mainvisual.jpg" alt="CBW 활용 예시">
     </div>
 
     <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
@@ -39,7 +32,7 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="YOUR_CBW_PDF_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="#" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -50,17 +43,13 @@
     <p class="section-desc">고온 환경이나 위험한 작업 현장에서 근로자의 생명과 건강을 지키는 스마트 안전 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/nextworklab_symbol.png" alt="I-BOW 메인 이미지">
+      <img src="/images/nextworklab_symbol.png" alt="I-BOW 메인 비주얼">
     </div>
 
     <p class="subhead">I-BOW는 열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다.</p>
 
     <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
     <p class="detail-text">외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다.</p>
-
-    <div class="product-image">
-      <img src="/images/placeholder_ibow_alert.png" alt="I-BOW 알림 방식 이미지">
-    </div>
 
     <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
     <p class="detail-text">현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 소리, 빛, 진동의 세 가지 패턴으로 위험을 알리고 수분 섭취와 휴식을 권고합니다.</p>
@@ -78,7 +67,7 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="YOUR_IBOW_PDF_LINK" target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="#" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -87,21 +76,17 @@
   <div class="hero hero--contact product">
     <h1 class="headline">문의</h1>
     <p class="section-desc">솔루션 도입 및 파트너십 문의를 환영합니다. 확인 후 신속히 연락드리겠습니다.</p>
-
     <div class="contact-grid">
       <div class="contact-card">
         <div class="card-label">Email</div>
         <div class="card-value"><a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a></div>
         <p class="card-note">문의 주시면 영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
-        <a href="mailto:info@tuatua.kr?subject=[문의] 제품 도입 관련 문의" class="btn-nextwork btn-inquiry" style="margin-top: 20px; width: 100%;">메일 보내기</a>
       </div>
-
       <div class="contact-card">
         <div class="card-label">Address</div>
         <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
         <p class="card-note">강남역 5번 출구 인근에 위치하고 있습니다.</p>
       </div>
-
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
